<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:src="@drawable/back_btn_w_48" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/iv_back"
            android:text="Advanced Settings"
            android:textColor="#fff"
            android:textSize="18sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#161616"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginLeft="24dp"
            android:gravity="center_vertical"
            android:visibility="visible">

            <ImageView
                android:id="@+id/iv_memory_open"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:src="@drawable/booster_ico_w_48" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/iv_memory_open"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_boost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/memory_string"
                    android:textColor="#fff"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_boost"
                    android:layout_marginLeft="10dp"
                    android:text="@string/boost_desc"
                    android:textColor="#fff"
                    android:textSize="14sp" />
            </LinearLayout>


            <ImageView
                android:id="@+id/iv_memory_choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:src="@drawable/open_btn_b_71" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginLeft="24dp"
            android:gravity="center_vertical"
            android:visibility="visible">

            <ImageView
                android:id="@+id/iv_charge_open"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:src="@drawable/charge_ico_w_48" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/iv_charge_open"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_charge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/charge_string"
                    android:textColor="#fff"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_charge"
                    android:layout_marginLeft="10dp"
                    android:text="@string/boost_desc"
                    android:textColor="#fff"
                    android:textSize="14sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/iv_charge_choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:src="@drawable/open_btn_b_71" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginLeft="24dp"
            android:gravity="center_vertical"
            android:visibility="visible">

            <ImageView
                android:id="@+id/iv_wifi_open"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:src="@drawable/wificharge_ico_w_48" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/iv_wifi_open"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_wifi_charge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/open_wifi_optimial"
                    android:textColor="#fff"
                    android:layout_marginBottom="5dp"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_wifi_charge"
                    android:layout_marginLeft="10dp"

                    android:text="@string/boost_desc"
                    android:textColor="#fff"
                    android:textSize="14sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/iv_wifi_optimizer"
                android:layout_width="wrap_content"
                android:layout_centerVertical="true"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:src="@drawable/open_btn_b_71" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginLeft="24dp"
            android:gravity="center_vertical"
            android:visibility="visible">

            <ImageView
                android:id="@+id/iv_wifi_quick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:src="@drawable/quickcharge_ico_w_48" />

            <TextView
                android:id="@+id/tv_wifi_quick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/iv_wifi_quick"
                android:text="@string/open_wifi_quick"
                android:textColor="#fff"
                android:textSize="18sp" />


            <ImageView
                android:id="@+id/iv_wifi_quick_choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:src="@drawable/open_btn_b_71" />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/rl_create_news_short"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginLeft="24dp"
            android:gravity="center_vertical"
            android:visibility="visible">

            <ImageView
                android:id="@+id/iv_short_news"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:src="@drawable/newscharge_ico_w_48" />

            <TextView
                android:id="@+id/tv_short_news"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/iv_short_news"
                android:text="@string/short_news_quick"
                android:textColor="#fff"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/iv_short_create_news"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:src="@drawable/more_ico_w_34" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_create_game_short"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginLeft="24dp"
            android:gravity="center_vertical"
            android:visibility="visible">

            <ImageView
                android:id="@+id/iv_short_game"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:src="@drawable/giftcharge_ico_w_48" />

            <TextView
                android:id="@+id/tv_short_game"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/iv_short_game"
                android:text="@string/short_game_quick"
                android:textColor="#fff"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/iv_short_game_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:src="@drawable/more_ico_w_34" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>