<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:src="@drawable/back_btn_w_48" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/iv_back"
            android:text="Settings"
            android:textColor="#fff"
            android:textSize="18sp" />
    </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#161616"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rl_auto_turn_off"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginLeft="24dp"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/iv_auto_off"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:src="@drawable/auto_ico_w_48" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/iv_auto_off"
                    android:text="@string/automactic_off"
                    android:textColor="#fff"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/more_ico_w_34" />
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginLeft="24dp"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/iv_sound"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:src="@drawable/sound_ico_w_48" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/iv_sound"
                    android:text="@string/sound"
                    android:textColor="#fff"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/iv_sound_choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/open_btn_b_71" />
            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/rl_advanced"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginLeft="24dp"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/iv_advanced"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:src="@drawable/advancecharge_ico_w_48" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/iv_advanced"
                    android:text="Advanced Settings"
                    android:textColor="#fff"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/iv_advanced_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/more_ico_w_34" />
            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/rl_feedback"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginLeft="24dp"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/iv_feedback"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:src="@drawable/feedback_ico_w_48" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/iv_feedback"
                    android:text="@string/feedback"
                    android:textColor="#fff"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/more_ico_w_34" />
            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/rl_rate"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginLeft="24dp"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_centerVertical="true"
                    android:id="@+id/iv_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:src="@drawable/rate_ico_w_48" />

                <TextView
                    android:layout_centerVertical="true"
                    android:id="@+id/tv_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/iv_rate"
                    android:text="@string/rate_string"
                    android:textColor="#fff"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_rate"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/iv_rate"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/star_img_o_48" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/star_img_o_48" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/star_img_o_48" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/star_img_o_48" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/star_img_o_48" />
                </LinearLayout>

                <ImageView
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/more_ico_w_34" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_update"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginLeft="24dp"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/iv_update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:src="@drawable/update_ico_w_48" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/iv_update"
                    android:text="@string/update_string"
                    android:textColor="#fff"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/more_ico_w_34" />
            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/rl_privacy"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginLeft="24dp"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/iv_privacy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:src="@drawable/privacy_ico_w_48" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/iv_privacy"
                    android:text="@string/privacy"
                    android:textColor="#fff"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/more_ico_w_34" />
            </RelativeLayout>
        </LinearLayout>
</LinearLayout>